--- a/setup/collections/requirements.yaml
+++ b/setup/collections/requirements.yaml
@@ -1,9 +1,4 @@
 ---
 collections:
-  - name: amazon.aws
-  - name: ansible.posix
-  - name: cloud.common
-  - name: community.aws
+  - name: azure.azcollection
   - name: community.crypto
-  - name: community.general
-  - name: kubernetes.core
